Added log viewing.

--- a/administrator/language/en-GB/en-GB.com_mailto.ini
+++ b/administrator/language/en-GB/en-GB.com_mailto.ini
@@ -33,11 +33,25 @@ COM_MAILTO_FIELD_MODIFIED_TIME_LABEL="Modified"
 COM_MAILTO_METADATA_FIELDSET_LABEL="Metadata"
 COM_MAILTO_ERROR_N_INVALID_FIELDS="You have %d invalid field(s)."
 COM_MAILTO_ERROR_GROUP_TITLE="The email group record needs a title."
-COM_MAILTO_GROUPS_TITLE="Email groups"
+COM_MAILTO_GROUPS_TITLE="Mailto: Email groups"
 COM_MAILTO_FIELD_EMAILS_LABEL="Emails"
 COM_MAILTO_FIELD_EMAILS_DESC="Add one or more email addresses, separated by commas."
 COM_MAILTO_LIST_NOTE="(<span>Note</span>: %s)"
 
 COM_MAILTO_SUBMENU_GROUPS="Email groups"
 COM_MAILTO_SUBMENU_LOGS="Logs"
+COM_MAILTO_GROUP_SEND_LOG="<i>%s</i> sent a group email about <a href="_QQ_"%s"_QQ_">%s</a> to <i>%s</i>."
+
+COM_MAILTO_LOGS_TITLE="Mailto: Email logs"
+
+COM_MAILTO_OPTION_RANGE_PAST_1MONTH="In the last month"
+COM_MAILTO_OPTION_RANGE_PAST_3MONTH="In the last 3 months"
+COM_MAILTO_OPTION_RANGE_PAST_6MONTH="In the last 6 months"
+COM_MAILTO_OPTION_RANGE_PAST_WEEK="In the last 7 days"
+COM_MAILTO_OPTION_RANGE_PAST_YEAR="In the last year"
+COM_MAILTO_OPTION_RANGE_POST_YEAR="More than a Year ago"
+COM_MAILTO_OPTION_RANGE_TODAY="Today"
+COM_MAILTO_OPTION_FILTER_DATE="- Filter by date range -"
+COM_MAILTO_MESSAGE_HEADING="Log message"
+
 
