Added language file for frontend mailto component.

--- a/language/en-GB/en-GB.com_mailto.ini
+++ b/language/en-GB/en-GB.com_mailto.ini
@@ -4,6 +4,9 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
+COM_MAILTO_EMAIL_GROUP="Email group"
+COM_MAILTO_SELECT_EMAIL_GROUP="- Select group -"
+
 COM_MAILTO="Mailto"
 COM_MAILTO_CANCEL="Cancel"
 COM_MAILTO_CLOSE_WINDOW="Close Window"
