Added component configuration setting for custom stylesheets in the emails.

--- a/administrator/language/en-GB/en-GB.com_mailto.ini
+++ b/administrator/language/en-GB/en-GB.com_mailto.ini
@@ -54,4 +54,7 @@ COM_MAILTO_OPTION_RANGE_TODAY="Today"
 COM_MAILTO_OPTION_FILTER_DATE="- Filter by date range -"
 COM_MAILTO_MESSAGE_HEADING="Log message"
 
-
+COM_MAILTO_FIELDSET_BASIC_LABEL="Basic configuration"
+COM_MAILTO_FIELD_STYLESHEETS_LABEL="Stylesheets"
+COM_MAILTO_FIELD_STYLESHEETS_DESC="Put the url to one or more stylesheets on a new line."
+COM_MAILTO_CONFIGURATION="Mail To Configuration"
