Get basic functionality working; reconfigure some component options.

--- a/administrator/language/en-GB/en-GB.com_mailto.ini
+++ b/administrator/language/en-GB/en-GB.com_mailto.ini
@@ -58,3 +58,14 @@ COM_MAILTO_FIELDSET_BASIC_LABEL="Basic configuration"
 COM_MAILTO_FIELD_STYLESHEETS_LABEL="Stylesheets"
 COM_MAILTO_FIELD_STYLESHEETS_DESC="Put the url to one or more stylesheets on a new line."
 COM_MAILTO_CONFIGURATION="Mail To Configuration"
+
+COM_MAILTO_FIELD_GROUP_FROM_NAME_LABEL="Group sender name"
+COM_MAILTO_FIELD_GROUP_FROM_NAME_DESC="Use this as the sender name when mailing to a group. For example, you might use 'Undisclosed recipients'."
+COM_MAILTO_FIELD_GROUP_FROM_MAIL_LABEL="Group sender email"
+COM_MAILTO_FIELD_GROUP_FROM_MAIL_DESC="Use this as the sender email when mailing to a group. For example, you might use a 'no-reply@...' style email address that is set up for your mail server."
+
+COM_MAILTO_FIELD_GROUP_SEND_LABEL="Send group mails"
+COM_MAILTO_FIELD_GROUP_SEND_DESC="When using a mail group, send the mails normally, copied (CC) or blind (BCC). This includes any manually added email addresses."
+COM_MAILTO_OPTION_SEND_NORMAL="normally"
+COM_MAILTO_OPTION_SEND_CC="as cc's"
+COM_MAILTO_OPTION_SEND_BCC="as bcc's"
