Allow email to take the subject and body from the content.

--- a/administrator/language/en-GB/en-GB.com_mailto.ini
+++ b/administrator/language/en-GB/en-GB.com_mailto.ini
@@ -69,3 +69,5 @@ COM_MAILTO_FIELD_GROUP_SEND_DESC="When using a mail group, send the mails normal
 COM_MAILTO_OPTION_SEND_NORMAL="normally"
 COM_MAILTO_OPTION_SEND_CC="as cc's"
 COM_MAILTO_OPTION_SEND_BCC="as bcc's"
+COM_MAILTO_FIELD_USE_CONTENT_LABEL="Use content as subject and body"
+COM_MAILTO_FIELD_USE_CONTENT_DESC="If found, use the content title and text for the subject and body of the email."
